syntax = "proto3";

option java_package = "com.tutorial";

service user{
  rpc login(LoginRequest)  returns (APIResponse);
  rpc logout(Empty)  returns (APIResponse);
  rpc listUsers(Empty) returns (stream APIResponse);
  rpc recordUsers (stream UserPro) returns (APIResponse);
}

message LoginRequest{
  string username = 1 ;
  string password = 2 ;
}

message APIResponse{
  string responsemessage = 1;
  int32  responseCode  = 2;
  repeated UserPro userList = 3;
}

message Empty{
}
message UserPro {
  string username = 1;
  string password = 2;

  }